gateway/gateway.yml
# chrono @ 2023-11

---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: kong-gc
  annotations:
    konghq.com/gatewayclass-unmanaged: 'true'

spec:
  controllerName: konghq.com/kic-gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kong-gc
spec:
  gatewayClassName: kong-gtw
  listeners:
  - name: proxy
    port: 80
    protocol: HTTP
